[tool.poetry]
name = "[github]mingkerweb"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs-material = {extras = ["imaging"], version = "^9.5.33"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
